# calimero-examples

./: .gitignore  README.md
bridging-fts/: README.md  bridge.ts  bridge_fts.sh  cli.ts  index.ts  package.json  tsconfig.json
calimero-login/: package-lock.json  package.json
calimero-login/src/: App.js  index.js
calimero-login/ui/: package.json
cross-calls/: README.md
cross-calls/main/: Cargo.toml
cross-calls/main/src/: lib.rs
cross-calls/privat/: Cargo.toml
near-sign-message/: README.md  index.html
nft-market/: next.config.js  package.json
nft-market/constants/: en.global.json
nft-market/contracts/: README.md
nft-market/nft-contract/: Cargo.toml
nft-market/pages/: buynfts.tsx  index.tsx  mint.tsx  mynfts.tsx
nft-market/styles/: globals.css
nft-market/ui/: README.md  next.config.js  package.json  tailwind.config.js
nft-market/utils/: calimeroSdk.ts  config.ts  mint.ts  useNear.ts
own-nft-with-private-metadata/: .gitignore  package.json
own-nft-with-private-metadata/contracts/: Cargo.toml
own-nft-with-private-metadata/frontend/: .gitignore  ContractInteraction.js  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
tic-tac-toe-cross-shard/contracts/: README.md
tic-tac-toe-cross-shard/ui/: package.json
tic-tac-toe/contracts/calimero-tictactoe/: Cargo.toml  deploy_calimero.sh
tic-tac-toe/contracts/calimero-tictactoe/neardev/: dev-account.env
tic-tac-toe/contracts/calimero-tictactoe/src/: lib.rs
voting/contracts/private/: Cargo.toml  README.md  deploy_calimero.sh
voting/contracts/private/src/: lib.rs
(+335 files in other folders)
